Fixes and improvements for overlaps UI

--- a/variantgrid/static_files/default_static/css/global_bs.scss
+++ b/variantgrid/static_files/default_static/css/global_bs.scss
@@ -922,3 +922,20 @@ ul.compact {
     border-radius: 4px;
     background-color: #F0D9ED !important;
 }
+
+// discordance levels
+.overlap-discordant {
+    background-color: #ebb;
+}
+
+.overlap-concordant_agreement, .overlap-concordant_agreement_diff_vus {
+    background-color: #88dd88;
+}
+
+.overlap-confidence {
+    background-color: #44bb44;
+}
+
+.overlap-single_submission, .overlap-no_entries {
+    background-color: #ccc;
+}
